Updates to Rashba notebook.

--- a/src/rashbacoupling.ipynb
+++ b/src/rashbacoupling.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Recompiling stale cache file C:\\Users\\deklu\\.julia\\compiled\\v1.1\\FFTW\\PvIn2.ji for FFTW [7a1cc6ca-52ef-59f5-83cd-3a7055c09341]\n",
+      "└ @ Base loading.jl:1184\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "-0.4803921568627451:0.0196078431372549:0.4803921568627451"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19,6 +27,7 @@
    "source": [
     "using SparseArrays\n",
     "using LinearAlgebra\n",
+    "using Arpack\n",
     "import FFTW\n",
     "# natural units\n",
     "a=m=hbar=1\n",
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +49,7 @@
        "  [2, 2]  =  1"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,110 +86,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5000×5000 SparseMatrixCSC{Complex{Float64},Int64} with 255000 stored entries:\n",
-       "  [1   ,    1]  =  4.9848+0.0im\n",
-       "  [4   ,    1]  =  0.0+0.266667im\n",
-       "  [8   ,    1]  =  0.0+0.106667im\n",
-       "  [12  ,    1]  =  0.0+0.0685714im\n",
-       "  [16  ,    1]  =  0.0+0.0507937im\n",
-       "  [20  ,    1]  =  0.0+0.040404im\n",
-       "  [24  ,    1]  =  0.0+0.0335664im\n",
-       "  [28  ,    1]  =  0.0+0.0287179im\n",
-       "  [32  ,    1]  =  0.0+0.025098im\n",
-       "  [36  ,    1]  =  0.0+0.022291im\n",
-       "  [40  ,    1]  =  0.0+0.0200501im\n",
-       "  [44  ,    1]  =  0.0+0.0182195im\n",
-       "  ⋮\n",
-       "  [4957, 5000]  =  0.0-0.349608im\n",
-       "  [4961, 5000]  =  0.0-0.402859im\n",
-       "  [4965, 5000]  =  0.0-0.467753im\n",
-       "  [4969, 5000]  =  0.0-0.54902im\n",
-       "  [4973, 5000]  =  0.0-0.654288im\n",
-       "  [4977, 5000]  =  0.0-0.796731im\n",
-       "  [4981, 5000]  =  0.0-1.00122im\n",
-       "  [4985, 5000]  =  0.0-1.32104im\n",
-       "  [4989, 5000]  =  0.0-1.89474im\n",
-       "  [4993, 5000]  =  0.0-3.23024im\n",
-       "  [4997, 5000]  =  0.0-9.89899im\n",
-       "  [5000, 5000]  =  12337.0+0.0im"
+       "gs (generic function with 1 method)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Hamiltonian in momentum basis\n",
-    "HM(delta, alpha) = kron(TM, idM, idS) + delta*kron(idM, idM, sz) + alpha*(kron(pM, idM, sy) - kron(idM, pM, sx))\n",
+    "HM(delta, alpha) = kron(TM, idM, idS) + kron(idM, TM, idS) + delta*kron(idM, idM, sz) + alpha*(kron(pM, idM, sy) - kron(idM, pM, sx))\n",
     "# ground state\n",
-    "gs(delta, alpha) = -eig"
+    "gs(delta, alpha) = eigs(HM(delta, alpha), nev=1, which=:SR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.009999999999999998"
+       "5000×1 Array{Complex{Float64},2}:\n",
+       "   3.642050773923621e-12 - 1.385951380676529e-12im \n",
+       "      0.1014863735585993 - 0.0033670900673521778im \n",
+       "   -0.013419399159065431 - 0.40446977323089917im   \n",
+       "  -5.619461374831026e-12 - 1.4678614860512184e-11im\n",
+       "  -2.265396075489369e-11 + 8.688451679661158e-12im \n",
+       "     -0.6340707378814023 + 0.021037043778926522im  \n",
+       "    0.018716555617278984 + 0.5641296541264014im    \n",
+       "   7.809991587307295e-12 + 2.032924982641788e-11im \n",
+       "  1.0177828655670217e-11 - 3.919551998569373e-12im \n",
+       "     0.28450082960861256 - 0.009439098904979093im  \n",
+       "   -0.001281890756754963 - 0.03863705502356507im   \n",
+       "  -5.418201197951602e-13 - 1.3905894663975096e-12im\n",
+       "  1.3993029997394474e-12 - 5.359432325501265e-13im \n",
+       "                         ⋮                         \n",
+       "  -2.367748834172592e-11 - 7.136556117585847e-10im \n",
+       "   5.878090034811293e-18 - 1.5559159335008956e-17im\n",
+       "   3.761506115000529e-18 - 3.121680821580155e-18im \n",
+       "   1.3778468213122191e-9 - 4.571386665565719e-11im \n",
+       " -1.1103856600945522e-11 - 3.346786719065644e-10im \n",
+       "  1.6007343873810854e-17 - 1.643230397470854e-17im \n",
+       "  -5.138546777816563e-20 - 1.0887303142549846e-17im\n",
+       "    1.328053228187215e-9 - 4.406181180523977e-11im \n",
+       " -1.8341516567882367e-12 - 5.528296532330107e-11im \n",
+       "  3.5604805894673135e-17 + 2.4530983305564884e-17im\n",
+       "   6.983450056103292e-17 - 3.062662398243972e-17im \n",
+       "   1.4370304468181762e-9 - 4.7677444225963366e-11im"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1/50/sqrt(2)/sqrt(2)"
+    "gamma=gs(1,20)[2]\n",
+    "#HM(1,20)[1,52]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "-9.186428575102775e-14 - 6.058451752097371e-28im"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1%2"
+    "X = dot(gamma, kron(xM, idM, idS) * gamma)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "0.03821209864844788 + 2.168404344971009e-19im"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "0%2\n"
+    "XX=dot(gamma, kron(xM*xM, idM, idS) * gamma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.0006128196231475039 - 1.3552527156068805e-20im"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "YY=dot(gamma, kron(xM, xM, idS) * gamma)"
    ]
   },
   {
@@ -188,7 +219,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rdm(psiABC, dA, dB, dC)"
+   ]
   }
  ],
  "metadata": {
