--- a/src/rashbacoupling.ipynb
+++ b/src/rashbacoupling.ipynb
@@ -2,26 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Recompiling stale cache file C:\\Users\\deklu\\.julia\\compiled\\v1.1\\FFTW\\PvIn2.ji for FFTW [7a1cc6ca-52ef-59f5-83cd-3a7055c09341]\n",
-      "└ @ Base loading.jl:1184\n"
+     "ename": "ArgumentError",
+     "evalue": "ArgumentError: Package Arpack not found in current path:\n- Run `import Pkg; Pkg.add(\"Arpack\")` to install the Arpack package.\n",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: Package Arpack not found in current path:\n- Run `import Pkg; Pkg.add(\"Arpack\")` to install the Arpack package.\n",
+      "",
+      "Stacktrace:",
+      " [1] require(::Module, ::Symbol) at ./loading.jl:876",
+      " [2] top-level scope at In[1]:3"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-0.4803921568627451:0.0196078431372549:0.4803921568627451"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -226,15 +220,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.1.0",
+   "display_name": "Julia 1.2.0",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.2"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.1.0"
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
