Notebook and package updates.

--- a/notebooks/Spin.ipynb
+++ b/notebooks/Spin.ipynb
@@ -2,97 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Recompiling stale cache file /home/david/.julia/compiled/v1.2/Latexify/AItXo.ji for Latexify [23fbe1c1-3f47-55db-b15f-69d7ec21a316]\n",
-      "└ @ Base loading.jl:1240\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Revise\n",
+    "using Laconic\n",
     "using Laconic.SpinM\n",
     "using Latexify\n",
-    "using LaTeXStrings"
+    "using LaTeXStrings\n",
+    "using LinearAlgebra"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$S_{x} = \\left[\n",
-       "\\begin{array}{cc}\n",
-       "0.0+0.0\\textit{i} & 0.5+0.0\\textit{i} \\\\\n",
-       "0.5+0.0\\textit{i} & 0.0+0.0\\textit{i} \\\\\n",
-       "\\end{array}\n",
-       "\\right]$"
-      ],
-      "text/plain": [
-       "L\"$S_{x} = \\left[\n",
-       "\\begin{array}{cc}\n",
-       "0.0+0.0\\textit{i} & 0.5+0.0\\textit{i} \\\\\n",
-       "0.5+0.0\\textit{i} & 0.0+0.0\\textit{i} \\\\\n",
-       "\\end{array}\n",
-       "\\right]$\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$S_{y} = \\left[\n",
-       "\\begin{array}{cc}\n",
-       "0.0+0.0\\textit{i} & 0.0-0.5\\textit{i} \\\\\n",
-       "0.0+0.5\\textit{i} & 0.0+0.0\\textit{i} \\\\\n",
-       "\\end{array}\n",
-       "\\right]$"
-      ],
-      "text/plain": [
-       "L\"$S_{y} = \\left[\n",
-       "\\begin{array}{cc}\n",
-       "0.0+0.0\\textit{i} & 0.0-0.5\\textit{i} \\\\\n",
-       "0.0+0.5\\textit{i} & 0.0+0.0\\textit{i} \\\\\n",
-       "\\end{array}\n",
-       "\\right]$\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$S_{z} = \\left[\n",
-       "\\begin{array}{cc}\n",
-       "0.5+0.0\\textit{i} & 0.0+0.0\\textit{i} \\\\\n",
-       "0.0+0.0\\textit{i} & -0.5+0.0\\textit{i} \\\\\n",
-       "\\end{array}\n",
-       "\\right]$"
-      ],
-      "text/plain": [
-       "L\"$S_{z} = \\left[\n",
-       "\\begin{array}{cc}\n",
-       "0.5+0.0\\textit{i} & 0.0+0.0\\textit{i} \\\\\n",
-       "0.0+0.0\\textit{i} & -0.5+0.0\\textit{i} \\\\\n",
-       "\\end{array}\n",
-       "\\right]$\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "spin = Spin(1//2)\n",
     "S_x = sx(spin)\n",
@@ -103,8 +29,32 @@
     "display(latexify(:(S_z=$(S_z.matrix))))\n",
     "@assert S_x.matrix == 1//2 * σ_x\n",
     "@assert S_y.matrix == 1//2 * σ_y\n",
-    "@assert S_z.matrix == 1//2 * σ_z"
+    "@assert S_z.matrix == 1//2 * σ_z\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for n in 1:1000\n",
+    "    spin = Spin(n//2)\n",
+    "    S_x = sx(spin)\n",
+    "    S_y = sy(spin)\n",
+    "    S_z = sz(spin)\n",
+    "    out = commutator(S_x, S_y).matrix\n",
+    "    @assert out ≈ im*S_z.matrix\n",
+    "    @assert (S_x*S_x + S_y*S_y + S_z*S_z).matrix ≈ n//2 * (n//2 + 1)I\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
